make primary caret offset available lock-free in background (to speedup ShowIntentionPass.availableFor)